# lib_shopware6_api_base

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES.rst  CODE_OF_CONDUCT.md  INSTALL.md  LICENSE  README.md  README.rst  conftest.py  example.env  lib_shopware6_api_base.ipynb  mk  mk.py  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json  settings.json
.docs/: README_template.rst  badges.rst  commandline_help.rst  contribute.rst  description.rst  index.rst  installation.rst  installation_via_makefile.rst  installation_via_pypi.rst  tested_under.rst  try_in_jupyter.rst  usage.rst
.github/actions/extract-metadata/: action.yml
.github/workflows/: cicd_docker.yml  codeql.yml  default_cicd_public.yml  default_release_public.yml  python-package.yml
lib_shopware6_api_base/: .gitignore  __init__.py  __init__conf__.py  conf_shopware6_api_base_classes.py  conf_shopware6_api_base_docker_testcontainer.py  lib_shopware6_api_base.py  lib_shopware6_api_base_cli.py  lib_shopware6_api_base_criteria.py  lib_shopware6_api_base_criteria_aggregation.py  lib_shopware6_api_base_criteria_filter.py  lib_shopware6_api_base_criteria_sorting.py  lib_shopware6_api_base_helpers.py
notebooks/: Quickstart.ipynb
scripts/: __init__.py  __main__.py  _git.py  _metadata.py  _pip.py  _subprocess.py  _test_audit.py  _test_coverage.py  _test_steps.py  _utils.py  build.py  bump.py  bump_major.py  bump_minor.py  bump_patch.py  bump_version.py  clean.py  cli.py  dependencies.py  dev.py  help.py  install.py  menu.py  push.py  refractor.md  refractor.py  release.py  run_cli.py  target_metadata.py  test.py  toml_config.py  version_current.py
src/lib_shopware6_api_base/: __init__.py  __init__conf__.py  __main__.py  _compat.py  _http_common.py  conf_shopware6_api_base_classes.py  config.py  defaultconfig.toml  exit_codes.py  lib_shopware6_admin_client.py  lib_shopware6_api_base.py  lib_shopware6_api_base_cli.py  lib_shopware6_api_base_criteria.py  lib_shopware6_api_base_criteria_aggregation.py  lib_shopware6_api_base_criteria_filter.py  lib_shopware6_api_base_criteria_sorting.py  lib_shopware6_api_base_helpers.py  lib_shopware6_storefront_client.py  logging_setup.py  typed_click.py
src/lib_shopware6_api_base/defaultconfig.d/: 10-logging.toml  20-shopware.toml
tests/: conf_test_docker.py  conftest.py  docker.env  test_api_base.py  test_cli.py  test_conf_classes.py  test_config.py  test_criteria.py  test_criteria_aggregation.py  test_criteria_filter.py  test_criteria_sorting.py  test_doctests.py  test_helpers.py  test_logging_config.py
tests/local_testscripts/: lib_bash_functions.sh  testing_tools.py
